--- a/Pantarevir/Base.lproj/Main.storyboard
+++ b/Pantarevir/Base.lproj/Main.storyboard
@@ -656,7 +656,7 @@
         <scene sceneID="JaO-Dt-tOu">
             <objects>
                 <tableViewController id="4wz-v2-VLN" customClass="StatisticsTableViewController" customModule="Pantarevir" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="147" sectionHeaderHeight="28" sectionFooterHeight="28" id="0k4-xW-0WN">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="147" sectionHeaderHeight="28" sectionFooterHeight="28" id="0k4-xW-0WN">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.1110576923" green="0.1110576923" blue="0.1110576923" alpha="1" colorSpace="calibratedRGB"/>
@@ -692,6 +692,12 @@
                                             <color key="textColor" red="0.39819332599522028" green="0.64952636313504386" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEf-SY-rl9">
+                                            <rect key="frame" x="538" y="45" width="14" height="35"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="25"/>
+                                            <color key="textColor" red="0.99215686270000003" green="0.82352941180000006" blue="0.086274509799999996" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" red="0.11105769230769236" green="0.11105769230769236" blue="0.11105769230769236" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
@@ -699,6 +705,8 @@
                                         <constraint firstItem="Voe-9Y-xoC" firstAttribute="leading" secondItem="Dl3-aP-nmw" secondAttribute="leadingMargin" constant="11" id="J8D-BC-uKA"/>
                                         <constraint firstItem="0yb-U2-6Sb" firstAttribute="top" secondItem="Dl3-aP-nmw" secondAttribute="topMargin" constant="75" id="N5i-pB-Pok"/>
                                         <constraint firstItem="p2Z-hG-OYu" firstAttribute="leading" secondItem="Voe-9Y-xoC" secondAttribute="leading" id="VEl-Cz-Fgn"/>
+                                        <constraint firstItem="fEf-SY-rl9" firstAttribute="top" secondItem="Dl3-aP-nmw" secondAttribute="topMargin" constant="37" id="Vhb-g7-9by"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="fEf-SY-rl9" secondAttribute="trailing" constant="40" id="mpz-y5-owX"/>
                                         <constraint firstItem="p2Z-hG-OYu" firstAttribute="top" secondItem="Dl3-aP-nmw" secondAttribute="topMargin" constant="19" id="nNz-Mj-RqW"/>
                                         <constraint firstItem="Voe-9Y-xoC" firstAttribute="top" secondItem="Dl3-aP-nmw" secondAttribute="topMargin" constant="3" id="sYt-AW-cpF"/>
                                         <constraint firstItem="0yb-U2-6Sb" firstAttribute="trailing" secondItem="Dl3-aP-nmw" secondAttribute="trailingMargin" id="uiU-rW-5P8"/>
@@ -708,6 +716,7 @@
                                 <connections>
                                     <outlet property="dataLabel" destination="0yb-U2-6Sb" id="a0Y-y2-Efe"/>
                                     <outlet property="explanationLabel" destination="Voe-9Y-xoC" id="ggN-oZ-Nrh"/>
+                                    <outlet property="testLabel" destination="fEf-SY-rl9" id="jeD-Pj-f7s"/>
                                     <outlet property="titleLabel" destination="p2Z-hG-OYu" id="LVR-W8-naR"/>
                                 </connections>
                             </tableViewCell>
@@ -756,7 +765,7 @@
                                 </connections>
                             </containerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Din återvinning motsvarar..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DCa-uF-tnq">
-                                <rect key="frame" x="20" y="72" width="208" height="24"/>
+                                <rect key="frame" x="22" y="72" width="208" height="24"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -771,10 +780,10 @@
                             <constraint firstItem="OyV-la-Bkn" firstAttribute="leading" secondItem="FkN-Ti-VSj" secondAttribute="leadingMargin" constant="-10" id="eNY-gL-GLX"/>
                             <constraint firstItem="i0i-O2-Trd" firstAttribute="bottom" secondItem="QSB-EC-ma3" secondAttribute="top" id="ePG-jI-Ie7"/>
                             <constraint firstItem="OyV-la-Bkn" firstAttribute="top" secondItem="P8Y-BL-6md" secondAttribute="bottom" constant="4" id="f1I-v6-D7P"/>
-                            <constraint firstItem="DCa-uF-tnq" firstAttribute="top" secondItem="OyV-la-Bkn" secondAttribute="bottom" constant="22" id="h4D-Cr-j4k"/>
+                            <constraint firstItem="DCa-uF-tnq" firstAttribute="leading" secondItem="FkN-Ti-VSj" secondAttribute="leadingMargin" constant="2" id="jdD-Rv-BRP"/>
                             <constraint firstItem="neD-h2-VXR" firstAttribute="bottom" secondItem="QSB-EC-ma3" secondAttribute="top" id="jo1-Ng-VWW"/>
-                            <constraint firstItem="i0i-O2-Trd" firstAttribute="top" secondItem="DCa-uF-tnq" secondAttribute="bottom" constant="10" id="nx3-HZ-uat"/>
-                            <constraint firstItem="DCa-uF-tnq" firstAttribute="leading" secondItem="FkN-Ti-VSj" secondAttribute="leadingMargin" id="oVe-fm-euT"/>
+                            <constraint firstItem="i0i-O2-Trd" firstAttribute="top" secondItem="DCa-uF-tnq" secondAttribute="bottom" constant="10" id="pin-fO-hXg"/>
+                            <constraint firstItem="DCa-uF-tnq" firstAttribute="top" secondItem="OyV-la-Bkn" secondAttribute="bottom" constant="22" id="tLw-nA-cev"/>
                             <constraint firstItem="neD-h2-VXR" firstAttribute="leading" secondItem="FkN-Ti-VSj" secondAttribute="leading" id="xcz-v9-8np"/>
                         </constraints>
                     </view>
